[23665] update documents view columns, icons, meta data dialog